# nextor

./: .gitignore  LICENSE  README.md  README.zh-CN.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: privacy-policy.md
scripts/: process-icon.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ErrorBoundary.tsx  FileOperationErrorBoundary.tsx  FloatingViewControls.tsx  SettingsDialog.tsx
src/components/Editor/: CodeMirror.tsx  Editor.tsx  EmptyEditor.tsx  FindReplaceDialog.tsx  Preview.tsx  StatusBar.tsx  TableOfContents.tsx
src/components/Export/: WeChatExportDialog.tsx  WeChatThemeCard.tsx
src/components/FileExplorer/: ConfirmDeleteDialog.tsx  ContextMenu.tsx  (+5 more)
src/hooks/: useAppMenu.ts  useEditorAppHandlers.ts  useEditorState.ts  useFileOperations.ts  useFolderManager.ts  useKeyboardShortcuts.ts  usePreviewMode.ts  useSessionPersistence.ts  useTableOfContents.ts  useTheme.ts  useWeChatExport.ts  useWindowTheme.ts
src/lib/: debounce.ts  diagrams.ts  export.ts  format.ts  i18n.ts  logger.ts  menuBuilder.ts  menuItems.ts  pathValidation.ts  pdfExport.ts  query.ts  remarkWikiLinks.ts  tableOfContents.ts  wordCount.ts
src/locales/: en.json  zh.json
src/services/: fileService.ts  index.ts  types.ts
src/types/: markdown.ts  preview.ts  tauri.ts
(+41 files in other folders)
